# learnOpenGl

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
src/: 2_3_helloWindow.cpp  2_4_helloTriangle.cpp  2_4_helloTriangle_e1.cpp  2_4_helloTriangle_e2.cpp  2_4_helloTriangle_e3.cpp  meson.build
src/2_3_helloWindow/: meson.build
src/2_4_helloTriangle/: example.cpp  exercise_1.cpp  exercise_2.cpp  exercise_3.cpp  meson.build
src/2_5_shaders/: example.cpp  example.frag  exercise_1.cpp  exercise_1.vert  exercise_2.cpp  exercise_2.vert  exercise_3.cpp  exercise_3.vert  meson.build
src/common/: program.cpp  program.hpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: gl.h
